--- a/reply.html
+++ b/reply.html
@@ -26,7 +26,7 @@
     <h1>MV {{shipID}}!</h1>
 
     <form action="/ship">
-      <input list="shipID" name="shipID" placeholder="{{shipID}}">
+      <input list="shipID" name="shipID" value="{{shipID}}">
       <datalist id="shipID">
         <option value="10878">BBC Sapphire</option>  
         <option value="10876">BBC Pearl</option>  
