--- a/reply.html
+++ b/reply.html
@@ -3,6 +3,15 @@
   <head>
       <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
       <style>
+
+        img {
+          flex:none;
+        }
+
+        .container {
+          display:inline-flex;
+        }
+
         table {
           font-family: arial, sans-serif;
           border-collapse: collapse;
@@ -24,7 +33,7 @@
   <body>
 
     <h1>MV {{ship}}!</h1>
-
+   
     <form action="/ship">
       <input list="shipID" name="shipID" placeholder="{{ship}}">
       <datalist id="shipID">
@@ -35,7 +44,7 @@
       <input type="submit" value="Submit">
     </form>
 
-    <img src="https://maps.googleapis.com/maps/api/staticmap?size=640x640&path=color:0x0000ff|weight:5{{#each positions}}|{{this.latitude}},{{this.longitude}}{{/each}}&key={{GOOGLE_MAP_KEY}}">
+    <div class="container">
     <table>
       <tr>
         <th>Date</th>
@@ -56,7 +65,9 @@
       {{/each}}
       
     </table>
-
+    <div><img src="https://maps.googleapis.com/maps/api/staticmap?maptype=terrain&size=640x640&path=color:0x0000ff|weight:5{{#each positions}}|{{this.latitude}},{{this.longitude}}{{/each}}&key={{GOOGLE_MAP_KEY}}"></div>
+    
+  </div>
 
   </body>
 </html>
