--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </datalist>
       <input type="submit" value="Submit">
     </form>
-    
+    <br>
+    <br>
+    <a href="/compare">Amber Type Comparison</a>
     
     </body>
     </html>
