--- a/positions.html
+++ b/positions.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-      <script src=".\node_modules\chart.js\dist\Chart.min.js"></script>
+      <script src="chart.js\dist\Chart.min.js"></script>
 	  
 
 	<style>
@@ -206,7 +206,7 @@ var ctx2 = document.getElementById('myChart2').getContext('2d');
 					fill: false,
         },
         {
-					label: 'Neural Propeller Curve (no Wind, no Waves, 6m draft)',
+					label: 'Regression Propeller Curve (no Wind, no Waves, 6m draft)',
 					backgroundColor: 'rgb(100, 203, 207)',
 					borderColor: 'rgb(100, 203, 207)',
 					data: [
