--- a/index.html
+++ b/index.html
@@ -7,23 +7,18 @@
     <form action="/ship">
       <input list="shipID" name="shipID">
       <datalist id="shipID">
-        <option value="10878">BBC Sapphire</option>  
-        <option value="10876">BBC Pearl</option>  
-        <option value="10872">BBC Emerald</option>  
-        <option value="10870">BBC Amethyst</option>  
-        <option value="10875">BBC Moonstone</option>  
-        <option value="10873">BBC Amber</option>  
-        <option value="10869">BBC Aquamarine</option>  
-        <option value="10871">BBC Citrine</option>  
-        <option value="10877">BBC Ruby</option>  
-        <option value="10874">BBC Coral</option>      
+        {{#each shipList}}
+        <option value="{{this.id}}">{{this.ship}}</option>  
+        {{/each}}
         </datalist>
       <input type="submit" value="Submit">
     </form>
     <br>
+    <h2>Sistership Comparisons</h2>
     <br>
-    <a href="/compare">Amber Type Comparison</a>
-    
+    {{#each shipTypes}}
+    <a href="/compare?selectedShipType={{this.type}}">{{this.type}} Type </a><br>
+    {{/each}}
     </body>
     </html>
     
